[tool.poetry]
name = "levitree-rwis-api"
version = "0.1.0"
description = ""
authors = ["Aiden Vigue <aiden@vigue.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sanic = "^23.12.1"
pydantic = "^2.5.3"
async-modbus = "^0.2.1"
aioretry = "^5.0.2"
sanic-ext = "^23.12.0"
setuptools = "^69.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
